fix overflow iphone 7.0

--- a/style.css
+++ b/style.css
@@ -40,7 +40,6 @@ nav {
     justify-content: space-around;
     min-height: 15vh;
     padding: 0px 100px;
-    overflow: hidden;
 }
 
 .nav-links {
@@ -543,6 +542,10 @@ footer {
 
     header {
         overflow-x: hidden;
+    }
+
+    nav {
+        overflow: hidden;
     }
 
     #logo {
